<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="come.example.senasoft.trasmiautos.vista.Perfil"
    tools:showIn="@layout/app_bar_perfil">

    <EditText
        android:id="@+id/nombre_completo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/nombre_completo"
        android:textStyle="bold"
        android:inputType="text"/>
    <EditText
        android:id="@+id/fecha_de_nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_de_nacimiento"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:inputType="date"/>
    <EditText
        android:id="@+id/correo_electronico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:inputType="text"
        android:layout_marginTop="120dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="date"
        android:layout_marginTop="170dp"
        android:hint="@string/vencimiento_licencia"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar_registro"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/senasoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senasoft"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/participantes1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes1"
        android:layout_marginTop="390dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/participantes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes2"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
</RelativeLayout>
