<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="come.example.senasoft.trasmiautos.vista.Servicios">
<ToggleButton
    android:id="@+id/soat"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"/>
    <TextView
        android:id="@+id/txv_renovacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soat"
        android:textStyle="bold"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"/>
    <ToggleButton
        android:id="@+id/tecno_mecanica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginTop="80dp"
        />
    <TextView
        android:id="@+id/txv_tecno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        android:text="@string/tecno"
        android:layout_marginLeft="120dp"/>
    <ToggleButton
        android:id="@+id/impuestos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginTop="130dp" />
    <TextView
        android:id="@+id/pago_de_impuesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pago_de_impuestos"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="150dp"
        android:textStyle="bold"/>
    <ToggleButton
        android:id="@+id/pico_y_placa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginTop="180dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:id="@+id/pico_y_plac"
        android:text="@string/pico_y_placa"
        android:layout_marginTop="200dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/senasoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senasoft"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/participantes1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes1"
        android:layout_marginTop="390dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/participantes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes2"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

</RelativeLayout>
