<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="come.example.senasoft.trasmiautos.vista.MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <TextView
        android:id="@+id/txv_mensaje"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:text="@string/mensaje"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:onClick="registro"
        android:text="@string/btn_registrar" />
    <TextView
        android:id="@+id/senasoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senasoft"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/participantes1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes1"
        android:layout_marginTop="390dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/participantes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes2"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

</RelativeLayout>
