<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="come.example.senasoft.trasmiautos.vista.Eventos"
    tools:showIn="@layout/app_bar_eventos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_evento"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/senasoft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senasoft"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/participantes1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes1"
        android:layout_marginTop="390dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/participantes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes2"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
</RelativeLayout>
